--- a/USA2024 Elections.ipynb
+++ b/USA2024 Elections.ipynb
@@ -9430,10 +9430,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_combination_drop1.to_csv(\"USAelections.csv\")"
+   ]
   },
   {
    "cell_type": "markdown",
