Just update the file USA202

--- a/USA2024 Elections.ipynb
+++ b/USA2024 Elections.ipynb
@@ -9493,32 +9493,452 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_combination_drop1.to_csv(\"USAelections.csv\")"
+    "### next lines we are going to be detectives and see what might be wrong with the dataset\n",
+    "\n",
+    "df_combination_drop2 = df_combination_drop1.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1976 {}\n",
+      "1980 {}\n",
+      "1984 {}\n",
+      "1988 {}\n",
+      "1992 {}\n",
+      "1996 {}\n",
+      "2000 {}\n",
+      "2004 {'MARYLAND': 3}\n",
+      "2008 {}\n",
+      "2012 {}\n",
+      "2016 {'MARYLAND': 4}\n",
+      "2020 {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "targetyears = range(1976, 2024, 4)\n",
+    "results = {}\n",
+    "\n",
+    "for year in targetyears:\n",
+    "    subset_df = df_combination_drop2[df_combination_drop2[\"year\"] == year] \n",
+    "    counts = subset_df[\"state\"].value_counts()\n",
+    "    counts_overtwo = counts[counts > 2] \n",
+    "    results[year] = counts_overtwo.to_dict()\n",
+    "    \n",
+    "for year, counts in results.items():\n",
+    "    print(year, counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>state</th>\n",
+       "      <th>candidate</th>\n",
+       "      <th>candidatevotes</th>\n",
+       "      <th>totalvotes</th>\n",
+       "      <th>party_simplified</th>\n",
+       "      <th>vote_percentage</th>\n",
+       "      <th>Incumbent party nominee</th>\n",
+       "      <th>Challenger party nominee</th>\n",
+       "      <th>Party mandate</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Major policy change</th>\n",
+       "      <th>No social unrest</th>\n",
+       "      <th>No scandal</th>\n",
+       "      <th>No foreign or military failure</th>\n",
+       "      <th>Major foreign or military success</th>\n",
+       "      <th>Charismatic incumbent</th>\n",
+       "      <th>Uncharismatic challenger</th>\n",
+       "      <th>False keys</th>\n",
+       "      <th>Actual winner</th>\n",
+       "      <th>Predicted winner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>754</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MARYLAND</td>\n",
+       "      <td>JOHN KERRY</td>\n",
+       "      <td>1334493</td>\n",
+       "      <td>2384238</td>\n",
+       "      <td>DEMOCRATIC</td>\n",
+       "      <td>56</td>\n",
+       "      <td>GEORGE W. BUSH (REPUBLICAN)</td>\n",
+       "      <td>JOHN KERRY (DEMOCRATIC)</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4</td>\n",
+       "      <td>GEORGE W. BUSH</td>\n",
+       "      <td>GEORGE W. BUSH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>755</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MARYLAND</td>\n",
+       "      <td>GEORGE W. BUSH</td>\n",
+       "      <td>1024703</td>\n",
+       "      <td>2384238</td>\n",
+       "      <td>REPUBLICAN</td>\n",
+       "      <td>43</td>\n",
+       "      <td>GEORGE W. BUSH (REPUBLICAN)</td>\n",
+       "      <td>JOHN KERRY (DEMOCRATIC)</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4</td>\n",
+       "      <td>GEORGE W. BUSH</td>\n",
+       "      <td>GEORGE W. BUSH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>756</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MARYLAND</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2384238</td>\n",
+       "      <td>DEMOCRATIC</td>\n",
+       "      <td>0</td>\n",
+       "      <td>GEORGE W. BUSH (REPUBLICAN)</td>\n",
+       "      <td>JOHN KERRY (DEMOCRATIC)</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4</td>\n",
+       "      <td>GEORGE W. BUSH</td>\n",
+       "      <td>GEORGE W. BUSH</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     year     state       candidate  candidatevotes  totalvotes  \\\n",
+       "754  2004  MARYLAND      JOHN KERRY         1334493     2384238   \n",
+       "755  2004  MARYLAND  GEORGE W. BUSH         1024703     2384238   \n",
+       "756  2004  MARYLAND           OTHER               7     2384238   \n",
+       "\n",
+       "    party_simplified  vote_percentage      Incumbent party nominee  \\\n",
+       "754       DEMOCRATIC               56  GEORGE W. BUSH (REPUBLICAN)   \n",
+       "755       REPUBLICAN               43  GEORGE W. BUSH (REPUBLICAN)   \n",
+       "756       DEMOCRATIC                0  GEORGE W. BUSH (REPUBLICAN)   \n",
+       "\n",
+       "    Challenger party nominee  Party mandate  ...  Major policy change  \\\n",
+       "754  JOHN KERRY (DEMOCRATIC)           True  ...                False   \n",
+       "755  JOHN KERRY (DEMOCRATIC)           True  ...                False   \n",
+       "756  JOHN KERRY (DEMOCRATIC)           True  ...                False   \n",
+       "\n",
+       "     No social unrest  No scandal  No foreign or military failure  \\\n",
+       "754              True        True                           False   \n",
+       "755              True        True                           False   \n",
+       "756              True        True                           False   \n",
+       "\n",
+       "     Major foreign or military success  Charismatic incumbent  \\\n",
+       "754                               True                  False   \n",
+       "755                               True                  False   \n",
+       "756                               True                  False   \n",
+       "\n",
+       "     Uncharismatic challenger  False keys   Actual winner  Predicted winner  \n",
+       "754                      True           4  GEORGE W. BUSH    GEORGE W. BUSH  \n",
+       "755                      True           4  GEORGE W. BUSH    GEORGE W. BUSH  \n",
+       "756                      True           4  GEORGE W. BUSH    GEORGE W. BUSH  \n",
+       "\n",
+       "[3 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2004 = df_combination_drop2[df_combination_drop2[\"year\"] == 2004]\n",
+    "df2004MARYLAND = df2004[df2004[\"state\"] == \"MARYLAND\"]\n",
+    "df2004MARYLAND"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>state</th>\n",
+       "      <th>candidate</th>\n",
+       "      <th>candidatevotes</th>\n",
+       "      <th>totalvotes</th>\n",
+       "      <th>party_simplified</th>\n",
+       "      <th>vote_percentage</th>\n",
+       "      <th>Incumbent party nominee</th>\n",
+       "      <th>Challenger party nominee</th>\n",
+       "      <th>Party mandate</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Major policy change</th>\n",
+       "      <th>No social unrest</th>\n",
+       "      <th>No scandal</th>\n",
+       "      <th>No foreign or military failure</th>\n",
+       "      <th>Major foreign or military success</th>\n",
+       "      <th>Charismatic incumbent</th>\n",
+       "      <th>Uncharismatic challenger</th>\n",
+       "      <th>False keys</th>\n",
+       "      <th>Actual winner</th>\n",
+       "      <th>Predicted winner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1061</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>MARYLAND</td>\n",
+       "      <td>HILLARY CLINTON</td>\n",
+       "      <td>1677928</td>\n",
+       "      <td>2781446</td>\n",
+       "      <td>DEMOCRATIC</td>\n",
+       "      <td>60</td>\n",
+       "      <td>HILLARY CLINTON (DEMOCRATIC)</td>\n",
+       "      <td>DONALD TRUMP (REPUBLICAN)</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>6</td>\n",
+       "      <td>DONALD TRUMP</td>\n",
+       "      <td>DONALD TRUMP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1062</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>MARYLAND</td>\n",
+       "      <td>DONALD J. TRUMP</td>\n",
+       "      <td>943169</td>\n",
+       "      <td>2781446</td>\n",
+       "      <td>REPUBLICAN</td>\n",
+       "      <td>34</td>\n",
+       "      <td>HILLARY CLINTON (DEMOCRATIC)</td>\n",
+       "      <td>DONALD TRUMP (REPUBLICAN)</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>6</td>\n",
+       "      <td>DONALD TRUMP</td>\n",
+       "      <td>DONALD TRUMP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1063</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>MARYLAND</td>\n",
+       "      <td>DONALD J. TRUMP</td>\n",
+       "      <td>259</td>\n",
+       "      <td>2781446</td>\n",
+       "      <td>REPUBLICAN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>HILLARY CLINTON (DEMOCRATIC)</td>\n",
+       "      <td>DONALD TRUMP (REPUBLICAN)</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>6</td>\n",
+       "      <td>DONALD TRUMP</td>\n",
+       "      <td>DONALD TRUMP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1064</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>MARYLAND</td>\n",
+       "      <td>HILLARY CLINTON</td>\n",
+       "      <td>78</td>\n",
+       "      <td>2781446</td>\n",
+       "      <td>DEMOCRATIC</td>\n",
+       "      <td>0</td>\n",
+       "      <td>HILLARY CLINTON (DEMOCRATIC)</td>\n",
+       "      <td>DONALD TRUMP (REPUBLICAN)</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>6</td>\n",
+       "      <td>DONALD TRUMP</td>\n",
+       "      <td>DONALD TRUMP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      year     state        candidate  candidatevotes  totalvotes  \\\n",
+       "1061  2016  MARYLAND  HILLARY CLINTON         1677928     2781446   \n",
+       "1062  2016  MARYLAND  DONALD J. TRUMP          943169     2781446   \n",
+       "1063  2016  MARYLAND  DONALD J. TRUMP             259     2781446   \n",
+       "1064  2016  MARYLAND  HILLARY CLINTON              78     2781446   \n",
+       "\n",
+       "     party_simplified  vote_percentage       Incumbent party nominee  \\\n",
+       "1061       DEMOCRATIC               60  HILLARY CLINTON (DEMOCRATIC)   \n",
+       "1062       REPUBLICAN               34  HILLARY CLINTON (DEMOCRATIC)   \n",
+       "1063       REPUBLICAN                0  HILLARY CLINTON (DEMOCRATIC)   \n",
+       "1064       DEMOCRATIC                0  HILLARY CLINTON (DEMOCRATIC)   \n",
+       "\n",
+       "       Challenger party nominee  Party mandate  ...  Major policy change  \\\n",
+       "1061  DONALD TRUMP (REPUBLICAN)           True  ...                False   \n",
+       "1062  DONALD TRUMP (REPUBLICAN)           True  ...                False   \n",
+       "1063  DONALD TRUMP (REPUBLICAN)           True  ...                False   \n",
+       "1064  DONALD TRUMP (REPUBLICAN)           True  ...                False   \n",
+       "\n",
+       "      No social unrest  No scandal  No foreign or military failure  \\\n",
+       "1061              True        True                            True   \n",
+       "1062              True        True                            True   \n",
+       "1063              True        True                            True   \n",
+       "1064              True        True                            True   \n",
+       "\n",
+       "      Major foreign or military success  Charismatic incumbent  \\\n",
+       "1061                              False                  False   \n",
+       "1062                              False                  False   \n",
+       "1063                              False                  False   \n",
+       "1064                              False                  False   \n",
+       "\n",
+       "      Uncharismatic challenger  False keys  Actual winner  Predicted winner  \n",
+       "1061                      True           6   DONALD TRUMP      DONALD TRUMP  \n",
+       "1062                      True           6   DONALD TRUMP      DONALD TRUMP  \n",
+       "1063                      True           6   DONALD TRUMP      DONALD TRUMP  \n",
+       "1064                      True           6   DONALD TRUMP      DONALD TRUMP  \n",
+       "\n",
+       "[4 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2016 = df_combination_drop2[df_combination_drop2[\"year\"] == 2016]\n",
+    "df2016MARYLAND = df2016[df2016[\"state\"] == \"MARYLAND\"]\n",
+    "df2016MARYLAND"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_combination_drop3 = df_combination_drop2.drop(index=[756, 1063, 1064]).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_combination_drop3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_combination_drop3.to_csv(\"USAelections.csv\")"
    ]
   },
   {
